--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=order
+spring.datasource.url=jdbc:mysql://localhost:3306/order_service
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=none
+server.port=8081
