add openfeign ipc, wiremock tests

--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -83,6 +83,12 @@
             <version>5.3.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-jre8-standalone</artifactId>
+            <version>2.35.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
