--- a/inventory/compose.yml
+++ b/inventory/compose.yml
@@ -1,13 +1,12 @@
-version: '4'
 services:
   mysql:
     image: mysql:8.3.0
-    container_name: mysql
+    container_name: mysql_inventory
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
     ports:
-      - "3306:3306"
+      - "3316:3306"
     volumes:
       - ./mysql:/var/lib/mysql
       - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
