--- a/order/compose.yml
+++ b/order/compose.yml
@@ -1,8 +1,7 @@
-version: '4'
 services:
   mysql:
     image: mysql:8.3.0
-    container_name: mysql
+    container_name: mysql_order
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
