--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=product
 spring.data.mongodb.uri=mongodb://root:password@localhost:27017/product-service?authSource=admin
+springdoc.swagger-ui.path=/product-swagger-ui.html
+springdoc.api-docs.path=/product-api-docs
