--- a/inventory/src/main/resources/application.properties
+++ b/inventory/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=none
 server.port=8082
-springdoc.swagger-ui.path=/inventory-swagger-ui.html
-springdoc.api-docs.path=/inventory-api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
