--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=none
 server.port=8081
 inventory.url=http://localhost:8082
-springdoc.swagger-ui.path=/order-swagger-ui.html
-springdoc.api-docs.path=/order-api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
